[package]
name = "tts-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
reqwest = { version = "0.11", features = ["blocking"] }
rodio = { version = "0.17", features = ["wav"] }
log = "0.4.20"
clap = { version = "4", features = ["derive"]}

[lib]
name = "tts_reminder"
path = "src/lib.rs"

[[bin]]
name = "tss_reminder"
path = "src/main.rs"
