[package]
name = "tts-reminder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
rodio = { version = "0.17", features = ["wav"] }
clap = { version = "4", features = ["derive"]}

[lib]
name = "tts_reminder"
path = "src/lib.rs"

[[bin]]
name = "tss_reminder"
path = "src/main.rs"

[profile.release]
#opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
